[persist-sql] Added initialized scripts.

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>persist-hibernate-jpa</module>
         <module>persist-spring-jpa</module>
+        <module>persist-sql</module>
     </modules>
 
     <properties>
